--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
-group 'com.pivotal'
-version '1.0-SNAPSHOT'
+group 'io.pivotal'
+version '1.0.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
