--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,7 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-test'
 	testCompile("junit:junit")
 }
+
+jar {
+	baseName 'library-backend'
+}
